спроба змінити параметри application.properties